<resources>
    <string name="app_name">Android Activity Life Cycle</string>
    <string name="nam">Santo Domingo Church</string>
    <string name="loc1">Location:</string>
    <string name="dis1">Distance:</string>
    <string name="loc2">537 Quezon Avenue Santa Mesa Heights, Quezon City, Luzon 1114 Philippines</string>
    <string name="dis2">1.9 km from University of Santo Tomas</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
</resources>
